--- a/src/MVCBlog.Website/Views/Blog/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/Index.cshtml
@@ -8,23 +8,12 @@
     <link rel="canonical" href="@this.Request.Url.GetLeftPart(UriPartial.Authority)@Url.Content("~/")" />
 }
 
-@section HeroUnit {
-    @if (!this.Request.IsAuthenticated && !this.Model.Entries.Any())
-    {
-        <div class="jumbotron">
-            <h1>MVC Blog</h1>
-            <p>@Common.HeroText</p>
-            <p>@Html.ActionLink(@Common.Login, MVC.Administration.Index(), new { @class = "btn btn-primary btn-large" })</p>
-        </div>
-    }
-}
-
 @if (!string.IsNullOrEmpty(this.Model.Tag) || !string.IsNullOrEmpty(this.Model.Search))
 {
     <div class="well">
         @if (!string.IsNullOrEmpty(this.Model.Tag))
         {
-            <i class="glyphicon glyphicon-tag"></i>
+            <i class="icon-tag"></i>
             @Common.Tag<text>: @this.Model.Tag</text> 
         }
         else if (!string.IsNullOrEmpty(this.Model.Search))
@@ -34,22 +23,31 @@
         }
     </div>
 }
+<div class="span8 main-wrap">
+    <!-- begin .section-blog -->
+    <div class="section section-blog section-last row">
+        <h3 class="css3-gradient-2"><i class="icon-paper-clip"></i>Latest from the blog</h3>
+        @if (!this.Model.Entries.Any())
+        {
+            @Common.NoData
+        }
+        else
+        {
+            foreach (var entry in this.Model.Entries)
+            {
+            <!-- begin .blog-item -->
+                <div class="section-blog-item row-fluid">
+                    <div class="blog-item-excerpt">
+                        <h4><a href="#" title="title goes here">@Html.ActionLink(entry.Header, entry.Url)</a></h4>
+                        @{Html.RenderPartial(MVC.Blog.Views._BlogEntryHeaderControl, entry);}
+                        @Html.Raw(entry.ShortContent);
+                        <p>@Html.ActionLink(Common.Continue, entry.Url)</p>
+                    </div>
+                </div>
+            <!-- end .blog-item -->
+            }
+            Html.RenderPartial(MVC.Blog.Views._PagingControl, this.Model);
+        }
 
-@if (!this.Model.Entries.Any())
-{
-    @Common.NoData
-}
-else
-{
-    foreach (var entry in this.Model.Entries)
-    {
-        <h2>@Html.ActionLink(entry.Header, entry.Url)</h2>
-         @:<article>
-                Html.RenderPartial(MVC.Blog.Views._BlogEntryHeaderControl, entry);
-                @Html.Raw(entry.ShortContent);
-                <p>@Html.ActionLink(Common.Continue, entry.Url)</p>
-         @:</article>
-    }
-
-    Html.RenderPartial(MVC.Blog.Views._PagingControl, this.Model);
-}
+    </div>
+    <!-- end .section-blog -->
