--- a/src/MVCBlog.Website/Views/Blog/_BlogEntryHeaderControl.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/_BlogEntryHeaderControl.cshtml
@@ -1,18 +1,25 @@
 @model MVCBlog.Core.Entities.BlogEntry
 
-<p>
-    <i class="glyphicon glyphicon-calendar"></i> <time datetime="@this.Model.PublishDate.ToString("yyyy-MM-dd")">@this.Model.PublishDate.ToShortDateString()</time>
-
+<div class="blog-item-meta">
+    <span>
+        <i class="icon-calendar"></i><small>@this.Model.PublishDate.ToString("dd/MM/yyyy")</small>
+    </span>
+    <span>
+        <i class="icon-comments"></i><small><a href="@Url.Action(this.Model.Url)#comments">@this.Model.BlogEntryComments.Count comments</a></small>
+    </span>
     @if (this.Model.Author != null)
     {
-        <text>&nbsp; &nbsp;</text><i class="glyphicon glyphicon-user"></i> <text>@this.Model.Author</text>
+        <span>
+            <i class="icon-user"></i><small><text>@this.Model.Author</text></small>
+        </span>
     }
-
-    &nbsp; &nbsp;<i class="glyphicon glyphicon-comment"></i> <a href="@Url.Action(this.Model.Url)#comments" title="@Common.ToComments">@this.Model.BlogEntryComments.Count</a>
-
     @if (this.Request.IsAuthenticated)
     {
-        <text>&nbsp; &nbsp;</text><i class="glyphicon glyphicon-edit"></i> <a href="@Url.Action(MVC.Administration.EditBlogEntry(this.Model.Id))" title="@Common.Edit">@Common.Edit</a>
-        <text>&nbsp; &nbsp;</text><i class="glyphicon glyphicon-remove-circle"></i> <a href="@Url.Action(MVC.Blog.Delete(this.Model.Id))" class="adminlink deleteicon" title="@Common.Delete" onclick="if (!confirm('@Common.DeleteConfirmation')) { return false;}">@Common.Delete</a>
+        <span>
+            <i class="icon-edit"></i><small><a href="@Url.Action(MVC.Administration.EditBlogEntry(this.Model.Id))" title="@Common.Edit">@Common.Edit</a></small>
+</span>
+        <span>
+            <i class="icon-remove-circle"></i><small><a href="@Url.Action(MVC.Blog.Delete(this.Model.Id))" class="adminlink deleteicon" title="@Common.Delete" onclick="if (!confirm('@Common.DeleteConfirmation')) { return false;}">@Common.Delete</a></small>
+</span>
     }
-</p>
+</div>
