--- a/src/MVCBlog.Website/Views/Shared/Site.Layout.cshtml
+++ b/src/MVCBlog.Website/Views/Shared/Site.Layout.cshtml
@@ -5,58 +5,55 @@
     @Styles.Render("~/css/combined")
     @RenderSection("HeaderContent", false)
     <title>@Html.MvcSiteMap().SiteMapTitle() - www.YourDomain.de</title>
-
     <meta name="robots" content="index, follow" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="@this.Request.Url.Scheme://@this.Request.Url.Authority@Url.Content("~/")" />
     <link rel="SHORTCUT ICON" href="@Url.Content("~/favicon.ico")" type="image/x-icon" />
     <link rel="pingback" href="@this.Request.Url.GetLeftPart(UriPartial.Authority)@Url.Content("~/")@ConfigurationManager.AppSettings["PingbackHandler"]" />
     <link rel="alternate" type="application/rss+xml" title="@ConfigurationManager.AppSettings["BlogDescription"]" href="@this.Request.Url.GetLeftPart(UriPartial.Authority)@Url.Action(MVC.Blog.Feed())" />
+
+    <!-- Integrated Adobe Edge Fonts starts here -->
+    <script src="http://use.edgefonts.net/squada-one:n4.js"></script>
+    <script src="http://use.edgefonts.net/bebas-neue:n4.js"></script>
+    <!-- Integrated Adobe Edge Fonts ends here -->
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top hidden-print" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="@Url.RouteUrl(MVCBlog.Website.Routes.DEFAULT, new { action = MVC.Blog.ActionNames.Index, controller = MVC.Blog.Name })">MVC Blog</a>
-            </div>
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.RouteLink(@Common.Blog, MVCBlog.Website.Routes.DEFAULT, new { action = MVC.Blog.ActionNames.Index, controller = MVC.Blog.Name })</li>
-                    <li>@Html.ActionLink(@Common.About, MVC.About.Index())</li>
-                    <li><a href="@this.Request.Url.GetLeftPart(UriPartial.Authority)@Url.Action(MVC.Blog.Feed())" class="rss" title="@Common.RssFeed"></a></li>
-                </ul>
+    @*<div class="navbar navbar-inverse navbar-fixed-top hidden-print" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="@Url.RouteUrl(MVCBlog.Website.Routes.DEFAULT, new { action = MVC.Blog.ActionNames.Index, controller = MVC.Blog.Name })">MVC Blog</a>
+                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.RouteLink(@Common.Blog, MVCBlog.Website.Routes.DEFAULT, new { action = MVC.Blog.ActionNames.Index, controller = MVC.Blog.Name })</li>
+                        <li>@Html.ActionLink(@Common.About, MVC.About.Index())</li>
+                        <li><a href="@this.Request.Url.GetLeftPart(UriPartial.Authority)@Url.Action(MVC.Blog.Feed())" class="rss" title="@Common.RssFeed"></a></li>
+                    </ul>
 
-                <form method="get" class="navbar-form navbar-right" action="@Url.RouteUrl(MVCBlog.Website.Routes.DEFAULT, new { action = MVC.Blog.ActionNames.Index, controller = MVC.Blog.Name })">
-                    <div class="form-group">
-                        @Html.TextBox("search", null, new { placeholder = Common.Search, @class = "form-control" })
-                    </div>
-                </form>
+                    <form method="get" class="navbar-form navbar-right" action="@Url.RouteUrl(MVCBlog.Website.Routes.DEFAULT, new { action = MVC.Blog.ActionNames.Index, controller = MVC.Blog.Name })">
+                        <div class="form-group">
+                            @Html.TextBox("search", null, new { placeholder = Common.Search, @class = "form-control" })
+                        </div>
+                    </form>
+                </div>
             </div>
-        </div>
-    </div>
-
+        </div>*@
     <div class="container">
         @RenderSection("HeroUnit", false)
-
-        <ul class="breadcrumb hidden-print">@Html.MvcSiteMap().SiteMapPath()</ul>
-        <h1>@Html.MvcSiteMap().SiteMapTitle()</h1>
-        @RenderBody()
-
-        <hr />
-        <footer class="text-center">
-            @Html.ActionLink(@Common.Imprint, MVC.Imprint.Index())
-            |
-            @{Html.RenderPartial(MVC.Shared.Views._LogonControl);}
-        </footer>
+        <div class="row page-wrap">
+            <div class="span12 headerLink">
+                <a href="@Url.RouteUrl(MVCBlog.Website.Routes.DEFAULT, new { action = MVC.Blog.ActionNames.Index, controller = MVC.Blog.Name })"><h4 class="intro-slogan css3-gradient"><img src="~/images/CN-Large.png" height="170" width="170" />Coding Notes</h4></a>
+            </div>
+            @RenderBody()
+        </div>
     </div>
     @Scripts.Render("~/bundles/scripts")
     @RenderSection("ScriptContent", false)
