--- a/src/MVCBlog.Website/Views/Shared/_TagListControl.cshtml
+++ b/src/MVCBlog.Website/Views/Shared/_TagListControl.cshtml
@@ -1,10 +1,12 @@
 @model IEnumerable<MVCBlog.Core.Entities.Tag>
 
-<div>
-    <ul class="list-inline">
-        @foreach (var tag in this.Model)
-        { 
-            <li><i class="icon-tag"></i> <a href="@Url.RouteUrl(MVCBlog.Website.Routes.TAG, new { tag = tag.Name })">@tag.Name</a></li>
-        }
-    </ul>
-</div>
+<ul class="header-control list-inline">
+    @foreach (var tag in this.Model)
+    {
+        <li>
+            <div class="info-item">
+                <i class="fa fa-tag"></i> <a href="@Url.RouteUrl(MVCBlog.Website.Routes.TAG, new { tag = tag.Name })">@tag.Name</a>
+            </div>
+        </li>
+    }
+</ul>
