--- a/src/MVCBlog.Website/Views/Murilo/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Murilo/Index.cshtml
@@ -31,7 +31,7 @@
 <section id="info" class="big-name">
     <div class="sticky-paper-head has-shadow ">
         <div class="content">
-            <h1>Rovian Voelz Veronez</h1>
+            <h1>Murilo Santana</h1>
             <div class="short-tag">
                 software developer
             </div>
