--- a/src/MVCBlog.Website/Views/Murilo/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Murilo/Index.cshtml
@@ -33,7 +33,7 @@
         <div class="content">
             <h1>Murilo Santana</h1>
             <div class="short-tag">
-                software developer
+                software developer master
             </div>
         </div>
     </div>
