--- a/src/MVCBlog.Website/Views/Blog/Index.cshtml
+++ b/src/MVCBlog.Website/Views/Blog/Index.cshtml
@@ -3,7 +3,7 @@
 @section HeaderTitle {
     <div class="head-image bg-image" data-bg-image="images/head-image.jpg">
         <div class="avatar wow bounceInDown">
-            <img alt="avatar" src="images/avatar.jpg" />
+            <img alt="avatar" src="images/logo.png" />
         </div>
     </div>
 
